# learning-rust

./: Cargo.toml  tauri.conf.json
src/: helpers.rs  main.rs  menu.rs  resource.rs
src/commands/: collection.rs  dataset.rs  mod.rs  user.rs
